--- a/styles/carousel-multiple-items.css
+++ b/styles/carousel-multiple-items.css
@@ -86,12 +86,12 @@
   }
   
   .carousel-control-prev-icon {
-    background-image: url(images/prev-icon.png);
+    background-image: url(../assets/images/prev-icon.png);
   }
   .carousel-control-next-icon {
     /* border: 3px solid #000; */
     /* background-color: #555; */
-    background-image: url(images/next-icon.png);
+    background-image: url(../assets/images/next-icon.png);
   }
   
   .carousel-control-next {
